<resources>
    <string name="app_name">Авторизация</string>
    <string name="enter_number">Введите номер телефона</string>
    <string name="phone">79061112233</string>
    <string name="btn_next">Продолжить</string>
    <string name="txtSocial">Войти через социальную сеть</string>
    <string name="register">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txtSms">Вам отправлена смс с кодом</string>
    <string name="txtCode">Код</string>
    <string name="txtAccept">Я принимаю пользовательское соглашение</string>
    <string name="btnLogin">Войти</string>
</resources>
